--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=9000
 #serializer.algorithm=Java
 serializer.algorithm=Json
+org.lql.netty.chatandrpc.server.service.HelloService=org.lql.netty.chatandrpc.server.service.HelloServiceImpl
